--- a/index.html
+++ b/index.html
@@ -33,10 +33,17 @@
             <div>gambar</div>
         </div>
      </header>
+     <!----------end-header--------->
+
      <!----------Section 2------------>
-     <section class="gambar2">
-        <div>gambar</div>
-        <div>tulisan</div>
+     <section>
+        <h1>Flexbox</h1>
+         <div class="flex-container">
+         <div class="item satu"></div>
+         <div class="item dua"></div>
+         <div class="item tiga"></div>
+         </div>
+        
      </section>
         
     </body>
